# NyxMetrics

./: .gitignore  Dockerfile  LICENSE  app.py  db_nyx.sql  main.py  pyproject.toml
app/core/: #loaderButton.py#  check_db.py  graphBuilder.py  loaderButton.py  tableViewer.py
app/core/handler/: db_handler.py
qrc/: rc_res.qrc
ui/: ui_main.py  ui_main.ui
