[project]
name = "nyxmetrics"
version = "0.1.0"
description = ""
authors = [
    {name = "sshyta",email = "sshyta@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "docker (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
